# Rigid_body_simulation_demo

./: CMakeLists.txt  README.md  package.xml
config/: default.rviz  simulation_params.yaml
launch/: rigid_body_simulation.launch.py
log/: trajectory.csv  trajectory_free_drop.csv  trajectory_with_lift.csv  trajectory_zero_lift.csv  view.py
src/: rigid_body_node.cpp  rigid_body_node.hpp
tudat_demo/: CMakeLists.txt
tudat_demo/src/: main.cpp
urdf/: rigid_body.urdf
